@@ -1,1 +1,0 @@
-debian/manpages/quasselclient.1
