@@ -1,2 +1,0 @@
-debian/kde4-tmp/usr/bin/quassel /usr/bin
-debian/kde4-tmp/usr/share/applications/kde4/quassel.desktop /usr/share/applications/kde4/
