@@ -1,1 +1,0 @@
-debian/manpages/quassel.1
