@@ -8,6 +8,9 @@ quassel (1:0.12.2-1) UNRELEASED; urgency=medium
   * Set maintainer to Debian KDE Extras Team.
   * Add Vcs control fields pointing to the new git packaging repo.
   * Drop explicit phonon depenencies, they are automatically added.
+  * Build quassel against Qt5 + KF5 libs instead of a Qt4 and a KDE4 variant.
+    - Remove quassel-data-kde4.
+    - Turn quassel-kde4 and quassel-client-kde4 into transitional packages.
 
  -- Felix Geyer <fgeyer@debian.org>  Thu, 03 Sep 2015 18:39:11 +0200
 
